Fixed alignment of the class content

--- a/flexbox-exercises/06-flex-layout/style.css
+++ b/flexbox-exercises/06-flex-layout/style.css
@@ -55,6 +55,8 @@ a:visited {
 .content {
     display: flex;
     flex-direction: column;
+    flex: 1;
+    justify-content: center;
     align-items: center;
 }
 
